added extras, skills and contact sections. Updated main html file.

--- a/backend/public/main_index.html
+++ b/backend/public/main_index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="css/Extras.css">
   <link rel="stylesheet" href="css/App.css">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/Contact.css">
+  <link rel="stylesheet" href="css/Skills.css">
   <link rel="stylesheet" href="css/About.css">
   <link rel="stylesheet" href="css/Projects.css">
   <link rel="stylesheet" href="css/Insights.css">
@@ -85,12 +87,91 @@
         </div>
     </div>
 </section>
+<section id="extras" class="scroll-margin">
+  <div class="container">
+      <h2>Browse the extras</h2>
+
+      <!-- Mini Quizzes Section -->
+      <div class="extra-section" id="mini-quizzes-section">
+          <h3 id="mini-quizzes-heading">Mini Quizzes</h3>
+          <div class="quiz-items">
+              <div class="quiz-item">
+                  <h4>General Knowledge Quiz!</h4>
+                  <p>Do you know more than the average person? Test your general knowledge right here and find out!</p>
+                  <button><a href="/quiz-one">Start Quiz</a></button>
+              </div>
+              <div class="quiz-item">
+                  <h4>Let's Get Technical - Quiz!</h4>
+                  <p>Answer technical coding questions related modern programming languages and modern development tools!</p>
+                  <button><a href="/quiz-two">Start Quiz</a></button>
+              </div>
+          </div>
+      </div>
+
+      <!-- Downloadables Section -->
+      <div class="extra-section" id="mini-dw-section">
+          <h3 id="mini-dw-heading">Downloadables</h3>
+          <div class="download-items">
+              <div class="download-item">
+                  <h4>Code Example 1</h4>
+                  <p>Here is a section dedicated to some code samples from the site you are currently browsing. Take a look!</p>
+                  <a href="#">Download</a>
+              </div>
+              <div class="download-item">
+                  <h4>Resume</h4>
+                  <p>Browse through my resume and determine for yourself if I would be a good fit your company!</p>
+                  <a href="#">Download</a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<section id="skills">
+  <div class="container">
+      <h2>Am I the right fit?</h2>
+          <h3 id="compat">With ever-evolving tech stacks and groundbreaking new tools being released every day, it is important for 
+              developers to remain informed. Here is a list of my dev skills, visually represented, so that YOU can determine whether or not
+              I have the skills you need!<br /><br />
+          </h3>
+          <div class="skill-category">
+              <h4 id="skill-heading">Programming Languages</h4>
+                  <div class="skill">
+                      <h5>C# (for .NET/Blazor/Unity3D)</h5>
+                      <div class="skill-level">
+                          <div class="skill-bar"></div>
+                      </div>
+                      <p>Tough, but fair. I have always appreciated C# for its simplicity and power, and it is the programming language I am best accustomed to. 
+                          I particularly admire its versatility. When starting out, I thought that the versatility of C# would open up a 
+                          broad range of possibilities, and it has delivered! I love making small-scale indie games with Unity and I immediately loved working with Blazor, the UI framework for ASP.NET. </p>
+                  </div>
+
+                  <div class="skill">
+                      <h5>Python (for Web and ML)</h5>
+                      <div class="skill-level">
+                          <div class="skill-bar"></div>
+                      </div>
+                      <p>I particularly enjoy Python for its diversity and its beautiful simplicity. Python is also extremely handy due to its relationship with Machine Learning, 
+                          a field which I am also highly interested in. I enjoy working with Jupyter Notebook, Data Interaction libs like Numpy and Pandas, 
+                          as well as other Python related tools.</p>
+                  </div>
+          </div>
+  </div>
+</section>
+<section id="contact">
+  <div class="container">
+      <h2>Reach out to me</h2>
+      <p>Reach me in REAL-TIME: <a>REAL-TIME-CHAT-APP</a></p>
+      <p>Email: <a href="mailto:stevenserraowork@gmail.com">Reach out to me through email!</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/steven-serrao-0729841b1/" target="_blank">See me on LinkedIn!</a></p>
+      <p>GitHub: <a href="https://github.com/StevenSerrao1" target="_blank">My GitHub!</a></p>
+  </div>
+</section>
 </main>
   <footer class="scroll-margin">
     <div class="container">
         <p id="footer-text">&copy; 2024 Steven Serrao. All rights reserved.</p>
     </div>
-</footer>
+  </footer>
 </div>
 
 
@@ -98,5 +179,6 @@
 
   <script src="js/header.js"></script>
   <script src="js/insights.js"></script>
+  <script src="js/extras.js"></script>
 </body>
 </html>
